# pixoo-ctl

./: CLAUDE.md  Cargo.toml  LICENSE  README.md
docs/plans/: 2025-02-06-pixoo-ctl-design.md
src/: config.rs  device.rs  image.rs  main.rs  schedule.rs
